--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_staggered_animations:
   animations: ^2.0.2
-
+  fluttertoast: ^8.0.8
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
