--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_staggered_animations:
   animations: ^2.0.2
   fluttertoast: ^8.0.8
+  url_launcher:
   
 dev_dependencies:
   flutter_test:
