adicionando carrossel de imagem

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   animations: ^2.0.2
   fluttertoast: ^8.0.8
   url_launcher:
+  cached_network_image: ^3.2.0
+  carousel_pro:
   
 dev_dependencies:
   flutter_test:
